--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,44 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url(./vendor/normalize.css);
+@import url(./vendor/fonts/fonts.css);
+@import url(./blocks/page/page.css);
+@import url(./blocks/header/header.css);
+@import url(./blocks/header/__logo/header__logo.css);
+@import url(./blocks/profile/profile.css);
+@import url(./blocks/profile/__add-button/profile__add-button.css);
+@import url(./blocks/profile/__avatar_link/profile__avatar-link.css);
+@import url(./blocks/profile/__avatar/profile__avatar.css);
+@import url(./blocks/profile/__avatar-edit/profile__avatar-edit.css);
+@import url(./blocks/profile/__container-big/profile__container-big.css);
+@import url(./blocks/profile/__container/profile__container.css);
+@import url(./blocks/profile/__edit-button/profile__edit-button.css);
+@import url(./blocks/profile/__text-subtitle/profile__text-subtitle.css);
+@import url(./blocks/profile/__text-title/profile__text-title.css);
+@import url(./blocks/profile/__add-button-img/profile__add-button-img.css);
+@import url(./blocks/cards/cards.css);
+@import url(./blocks/cards/__container/cards__container.css);
+@import url(./blocks/cards/__minicontainer/cards__minicontainer.css);
+@import url(./blocks/cards/__like-counter/cards__like-counter.css);
+@import url(./blocks/cards/__item/cards__item.css);
+@import url(./blocks/cards/__items/cards__items.css);
+@import url(./blocks/cards/__like/cards__like.css);
+@import url(./blocks/cards/__pic/cards__pic.css);
+@import url(./blocks/cards/__text/cards__text.css);
+@import url(./blocks/cards/__basket/cards__basket.css);
+@import url(./blocks/cards/__like/_active/cards__like_active.css);
+@import url(./blocks/footer/footer.css);
+@import url(./blocks/footer/__text/footer__text.css);
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/__close-button/popup__close-button.css);
+@import url(./blocks/popup/__form/popup__form.css);
+@import url(./blocks/popup/__save-button/popup__save-button.css);
+@import url(./blocks/popup/__title/popup__title.css);
+@import url(./blocks/popup/_open/popup_open.css);
+@import url(./blocks/popup/__input/popup__input.css);
+@import url(./blocks/popup/__input/_type/_error/popup__input_type_error.css);
+@import url(./blocks/popup/__container/popup__container.css);
+@import url(./blocks/popup/__create-button/popup__create-button.css);
+@import url(./blocks/popup/__title/_white/popup__title_white.css);
+@import url(./blocks/popup/_type/_image/popup_type_image.css);
+@import url(./blocks/popup/__pic/popup__pic.css);
+@import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
+@import url(./blocks/popup/__error/popup__error_visible.css);
