--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,7 @@
 @import url(./blocks/cards/__pic/cards__pic.css);
 @import url(./blocks/cards/__text/cards__text.css);
 @import url(./blocks/cards/__basket/cards__basket.css);
+@import url(./blocks/cards/__basket/_hidden/cards__basket_hidden.css);
 @import url(./blocks/cards/__like/_active/cards__like_active.css);
 @import url(./blocks/footer/footer.css);
 @import url(./blocks/footer/__text/footer__text.css);
@@ -43,3 +44,4 @@
 @import url(./blocks/popup/__pic/popup__pic.css);
 @import url(./blocks/popup/__button/_disabled/popup__button_disabled.css);
 @import url(./blocks/popup/__error/popup__error_visible.css);
+@import url(./blocks/popup/_type/_image/popup_type_image.css);
